everything works now oks on local machine now
